<resources>
    <string name="app_name">RecyclerDemoB2</string>
    <string name="update">update</string>
    <string name="createAccount">create</string>
    <string name="listOfAccounts">list of accounts</string>
    <string name="delete">delete</string>
    <string name="serviceName">service name</string>
    <string name="mail">mail</string>
    <string name="addAccount">addAccount</string>
    <string name="username">username</string>
    <string name="password">password</string>
</resources>
